objects/LaTam_Mexico_Static_Values__mdt.object
<CustomObject>
    <description>&apos;Mexico custom metadata&apos; is used to store different static values which are referenced in apex class , validation rule etc .</description>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Used to store static values</description>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <description>Stores mexico sales org values</description>
        <label>Sales Org</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Number_Type_Condition__c</fullName>
        <description>Mexico</description>
        <label>Tax Number Type Condition</label>
        <referenceTo>LaTam_Tax_Number_Type_Condition__mdt</referenceTo>
        <relationshipName>Mexico_Static_Values</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>LaTam Mexico Static Values</label>
    <pluralLabel>LaTam Mexico Static Values</pluralLabel>
</CustomObject>